--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
 *::after {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body {
@@ -18,4 +19,16 @@ h1 {
     text-align: center;
     margin: 2rem 0;
     font-size: 4rem;
+}
+
+#grid-container {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 auto;
+    width: 500px;
+    height: 500px;
+}
+
+.grid-cell {
+    border: 1px black solid;
 }
